Thu Oct 28 09:52:32 2010                        Michael Jennings (mej)

Misc. fixes/cleanups to query execution.
----------------------------------------------------------------------
Fri Oct 29 03:38:13 2010                        Michael Jennings (mej)

Refactor Logger to offer convenience functions instead of requiring a flag.
----------------------------------------------------------------------
Fri Oct 29 19:41:08 2010                        Michael Jennings (mej)

Mostly cosmetic adjustments.
----------------------------------------------------------------------
Sat Oct 30 01:30:46 2010                        Michael Jennings (mej)

Add copyrights to perl modules.
----------------------------------------------------------------------
Sat Oct 30 17:29:40 2010                                           gmk

Renamed the Node and NodeSet classes to be a more general Object and
ObjectSet interface. Also added the ability to add to the Object and
ObjectSet via a hash or array of hashes (respectively) as well as
be able to find or iterate through the ObjectSet object.
----------------------------------------------------------------------
Sun Oct 31 22:45:08 2010                        Michael Jennings (mej)

Tidying as I peruse, putting together an action plan.
----------------------------------------------------------------------